--- a/css/main-1.6.css
+++ b/css/main-1.6.css
@@ -306,7 +306,7 @@ section {
 
 section h1 {
 
-    font-family: "EdwardianScrAltITCTT", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-family: "Tangerine", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", cursive;
     font-size: 2.6em;
 
 }
